--- a/build.gradle
+++ b/build.gradle
@@ -123,23 +123,12 @@ dependencies {
   // The userdev artifact is a special name and will get all sorts of transformations applied to it.
   minecraft "net.minecraftforge:forge:${mc_version}-${forge_version}"
 
-  // You may put jars on which you depend on in ./libs or you may define them like so..
-  // compile "some.group:artifact:version:classifier"
-  // compile "some.group:artifact:version"
-
-  // Real examples
-  // compile 'com.mod-buildcraft:buildcraft:6.0.8:dev'  // adds buildcraft to the dev env
-  // compile 'com.googlecode.efficient-java-matrix-library:ejml:0.24' // adds ejml to the dev env
-
-  // The 'provided' configuration is for optional dependencies that exist at compile-time but might not at runtime.
-  // provided 'com.mod-buildcraft:buildcraft:6.0.8:dev'
-
-  // These dependencies get remapped to your current MCP mappings
-  // deobf 'com.mod-buildcraft:buildcraft:6.0.8:dev'
-
-  // For more info...
-  // http://www.gradle.org/docs/current/userguide/artifact_dependencies_tutorial.html
-  // http://www.gradle.org/docs/current/userguide/dependency_management.html
+  // Additional helpful Mods for development (dev depenedency)
+  runtimeOnly fg.deobf("curse.maven:item-zoom-261725:3749454")
+  runtimeOnly fg.deobf("curse.maven:jade-324717:3865918")
+  runtimeOnly fg.deobf("curse.maven:jei-238222:3847103")
+  runtimeOnly fg.deobf("curse.maven:spark-361579:3824951")
+  runtimeOnly fg.deobf("curse.maven:xaeros_minimap-263420:3876770")
 }
 
 // Example for how to get properties into the manifest for reading by the runtime..
