Added basic dialog option and shared data. Added skin / variant selection with small preview. Improved server<>client communication and corresponding caching.

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -7,16 +7,20 @@
   "files.insertFinalNewline": true,
   "cSpell.words": [
     "Ageable",
+    "Attackable",
+    "blit",
     "Bordihn",
     "chestplate",
     "easynpc",
+    "FAITHY",
     "hotbar",
     "jayjasonbo",
     "Kaworru",
     "MAINHAND",
     "Markus",
     "markusbordihn",
-    "Pushable"
+    "Pushable",
+    "thefaithy"
   ],
   "cSpell.ignorePaths": [
     "*.yml",
@@ -33,6 +37,7 @@
   "java.dependency.showMembers": true,
   "java.dependency.packagePresentation": "flat",
   "editor.detectIndentation": false,
+  "java.compile.nullAnalysis.mode": "automatic",
   "java.compile.nullAnalysis.nullable": [
     "org.springframework.lang.Nullable",
     "javax.annotation.Nullable",
