Added additional profession and variant layer. Improved skin selection to allow selection per profession and variant. Added basic professor and security skin.

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -20,7 +20,9 @@
     "Markus",
     "markusbordihn",
     "Pushable",
-    "thefaithy"
+    "thefaithy",
+    "TOOLSMITH",
+    "WEAPONSMITH"
   ],
   "cSpell.ignorePaths": [
     "*.yml",
