Added Interaction action which could be triggered without any dialog. Added Skeleton model and remote skins support. Unified configuration UIs and added translation keys. Improved yes/no dialog buttons to allow longer texts to fix #3. Improved value validation and status updates. Improved texture manager for custom models. Remove test NPC spawn eggs.

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -33,7 +33,8 @@
     ".vscode",
     "build",
     "models",
-    "run"
+    "run",
+    "src/main/resources/assets/easy_npc/lang"
   ],
   "java.configuration.updateBuildConfiguration": "automatic",
   "java.format.settings.url": "./java-google-style.xml",
