Added basic CarryOn support to block unwanted pickup of NPCs. Improved documentation and added more examples.

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -11,6 +11,7 @@
     "blit",
     "Bordihn",
     "chestplate",
+    "Comms",
     "easynpc",
     "Elytra",
     "FAITHY",
@@ -20,6 +21,8 @@
     "MAINHAND",
     "Markus",
     "markusbordihn",
+    "modid",
+    "Pickable",
     "Pushable",
     "REPOSTS",
     "thefaithy",
