Added basic CarryOn support to block unwanted pickup of NPCs. Fixed Allay scale rendering. Improved documentation and added more examples.

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -8,24 +8,27 @@
   "cSpell.words": [
     "Ageable",
     "Attackable",
-    "blit",
     "Bordihn",
-    "chestplate",
-    "easynpc",
+    "Comms",
     "Elytra",
     "FAITHY",
-    "hotbar",
-    "jayjasonbo",
     "Kaworru",
     "MAINHAND",
     "Markus",
-    "markusbordihn",
+    "Pickable",
     "Pickable",
     "Pushable",
     "REPOSTS",
-    "thefaithy",
     "TOOLSMITH",
-    "WEAPONSMITH"
+    "WEAPONSMITH",
+    "blit",
+    "chestplate",
+    "easynpc",
+    "hotbar",
+    "jayjasonbo",
+    "markusbordihn",
+    "modid",
+    "thefaithy",
   ],
   "cSpell.ignorePaths": [
     "*.yml",
