Refactored code for 1.19.3-44.1.21. Thanks to @Narref95 for the groundwork. Added custom data serialization to support more complex data types. Improved performance of server and client processing by using custom data serialization. Added basic pose support for Easy NPC entities.

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -8,27 +8,32 @@
   "cSpell.words": [
     "Ageable",
     "Attackable",
+    "blit",
     "Bordihn",
+    "chestplate",
     "Comms",
+    "easynpc",
     "Elytra",
     "FAITHY",
-    "Kaworru",
-    "MAINHAND",
-    "Markus",
-    "Pickable",
-    "Pickable",
-    "Pushable",
-    "REPOSTS",
-    "TOOLSMITH",
-    "WEAPONSMITH",
-    "blit",
-    "chestplate",
-    "easynpc",
     "hotbar",
     "jayjasonbo",
+    "Kaworru",
+    "MAINHAND",
+    "MAKENA",
+    "Markus",
     "markusbordihn",
     "modid",
+    "Narref",
+    "NOOR",
+    "Pickable",
+    "Pushable",
+    "quaternionf",
+    "REPOSTS",
+    "SUNNNY",
     "thefaithy",
+    "TOOLSMITH",
+    "WEAPONSMITH",
+    "ZURI"
   ],
   "cSpell.ignorePaths": [
     "*.yml",
