--- a/build.gradle
+++ b/build.gradle
@@ -132,11 +132,11 @@ dependencies {
   minecraft "net.minecraftforge:forge:${mc_version}-${forge_version}"
 
   // Compability checks
-  runtimeOnly fg.deobf("curse.maven:neat-238372:4365517")
-  runtimeOnly fg.deobf("curse.maven:carry-on-274259:4375894")
+  // runtimeOnly fg.deobf("curse.maven:neat-238372:4365517")
+  // runtimeOnly fg.deobf("curse.maven:carry-on-274259:4375894")
 
   // Additional helpful Mods for development (dev depenedency)
-  runtimeOnly fg.deobf("curse.maven:item-zoom-261725:3903160")
+  // runtimeOnly fg.deobf("curse.maven:item-zoom-261725:3903160")
   runtimeOnly fg.deobf("curse.maven:jade-324717:4330163")
   runtimeOnly fg.deobf("curse.maven:jei-238222:4405393")
   runtimeOnly fg.deobf("curse.maven:spark-361579:4381167")
