Added new Zombie and Zombie Villager models. Added custom texture support for individual texture skins for map makers. Added possibility to execute commands as player. Fixed locked rotation for custom models by resetting rotations. Fixed crash when using invalid numbers for position. Fixed issue with invisible NPCs. Improved documentation and added more examples.

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -17,6 +17,7 @@
     "Elytra",
     "FAITHY",
     "hotbar",
+    "ILLAGER",
     "jayjasonbo",
     "Kaworru",
     "MAINHAND",
@@ -24,8 +25,10 @@
     "markusbordihn",
     "modid",
     "Pickable",
+    "purpur",
     "Pushable",
     "REPOSTS",
+    "simplequests",
     "thefaithy",
     "TOOLSMITH",
     "WEAPONSMITH"
