Added custom export and import functionality for NPCs over local files to allow easier sharing of NPCs. Added world export and import functionality for NPCs over world files to allow easier packing of NPCs. Added default presets for some common NPCs. Added basic knight skin. Improved UI and dialogs for better usability. Improved logging and error handling. Improved documentation and added more examples.

--- a/build.gradle
+++ b/build.gradle
@@ -132,7 +132,7 @@ dependencies {
   minecraft "net.minecraftforge:forge:${mc_version}-${forge_version}"
 
   // Compability checks
-  runtimeOnly fg.deobf("curse.maven:neat-238372:3878735")
+  // runtimeOnly fg.deobf("curse.maven:neat-238372:3878735")
   // runtimeOnly fg.deobf("curse.maven:carry-on-274259:4375891")
 
   // Integration Tests
