--- a/.vscode/extensions.json
+++ b/.vscode/extensions.json
@@ -1,6 +1,5 @@
 {
   "recommendations": [
-    "bungcip.better-toml",
     "davidanson.vscode-markdownlint",
     "dotjoshjohnson.xml",
     "naco-siren.gradle-language",
@@ -8,6 +7,7 @@
     "sonarsource.sonarlint-vscode",
     "streetsidesoftware.code-spell-checker",
     "vscjava.vscode-gradle",
-    "vscjava.vscode-java-pack"
+    "vscjava.vscode-java-pack",
+    "tamasfe.even-better-toml"
   ]
 }
