Added advanced trading configuration for NPCs with multiple items and prices. Added auto-reset for advanced and basic trading configuration. Added commands to open the trading screen and to reset the trading items. Added Skeleton Trader preset example for a dialog with trading options. Added better basic trading configuration. Fixed issue with importing legacy presets. Fixed issue with advanced and custom pose configuration.

--- a/build.gradle
+++ b/build.gradle
@@ -184,6 +184,7 @@ curseforge {
   project {
     id = "${curseforge_project_id}"
     changelog = file("CHANGELOG.md")
+    changelogType = 'markdown'
     releaseType = "${curseforge_release_type}"
     addGameVersion("${mc_version}")
     addGameVersion("Forge")
