Added advanced trading configuration for NPCs with multiple items and prices. Added auto-reset for advanced and basic trading configuration. Added commands to open the trading screen and to reset the trading items. Added Skeleton Trader preset example for a dialog with trading options. Added better basic trading configuration. Fixed issue with importing legacy presets. Fixed issue with advanced and custom pose configuration.

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -6,6 +6,7 @@
   "files.trimTrailingWhitespace": true,
   "files.insertFinalNewline": true,
   "cSpell.words": [
+    "AABB",
     "Ageable",
     "Attackable",
     "blit",
@@ -17,27 +18,26 @@
     "FAITHY",
     "Freefall",
     "gamemaster",
+    "GAMEMASTERS",
     "hotbar",
     "ILLAGER",
     "jayjasonbo",
+    "JELLIE",
     "Kaworru",
     "MAINHAND",
-    "MAKENA",
     "Markus",
     "markusbordihn",
     "modid",
-    "Narref",
-    "NOOR",
     "Pickable",
+    "purpur",
     "Pushable",
-    "quaternionf",
+    "RAGDOLL",
     "REPOSTS",
+    "SHORTHAIR",
     "simplequests",
-    "SUNNNY",
     "thefaithy",
     "TOOLSMITH",
-    "WEAPONSMITH",
-    "ZURI"
+    "WEAPONSMITH"
   ],
   "cSpell.ignorePaths": [
     "*.yml",
@@ -65,5 +65,6 @@
     "org.springframework.lang.NonNull",
     "javax.annotation.Nonnull",
     "org.eclipse.jdt.annotation.NonNull"
-  ]
+  ],
+  "java.jdt.ls.vmargs": "-XX:+UseParallelGC -XX:GCTimeRatio=4 -XX:AdaptiveSizePolicyWeight=90 -Dsun.zip.disableMemoryMapping=true -Xmx2G -Xms100m -Xlog:disable"
 }
