--- a/Forge/build.gradle
+++ b/Forge/build.gradle
@@ -136,6 +136,9 @@ dependencies {
   // Include Common code
   compileOnly project(":Common")
 
+  // Integration test dependencies
+  runtimeOnly fg.deobf("curse.maven:armourers-workshop-229523:${project.armourers_workshop_mod}")
+
   // Additional helpful Mods for development (runtime dependency)
   runtimeOnly fg.deobf("curse.maven:xaeros_minimap-263420:${project.xaeros_minimap_mod}")
   runtimeOnly fg.deobf("curse.maven:spark-361579:${project.spark_mod}")
@@ -192,6 +195,11 @@ curseforge {
     releaseType = "${project.curseforge_release_type}"
     addGameVersion("${project.minecraft_version}")
     addGameVersion("Forge")
+    mainArtifact(jar) {
+      relations {
+        optionalDependency 'armourers-workshop'
+      }
+    }
   }
 }
 
