Restricted the edit behavior for NPC to allow more use-cases to the following:   - User is sneaking and clicking on the NPC (creative mode only)   - User is holding the NPC wand and clicking on the NPC (all modes) Added possibility to adjust sliders with mouse wheel and arrow keys for better usability. Added dialog text editor to allow multiple dialog texts variants for the same dialog. Added "can_use_nether_portal" attribute to allow NPCs to use nether portals or not. Added support for `@initator` with `onHurt` and `onDeath` events. Added support for [Armourer's Workshop][armourers_workshop] mod. Thanks to @SAGESSE-CN. Added possibility to disable model parts to the advanced pose editor. Separated the Player Skin and remote URL Skin screen for better usability. Fixed head and body rotation are not show correctly in some instances. Fixed dialog editor UI issue with the new dialog text editor. Code optimizations and cleanup.

--- a/Forge/src/main/resources/META-INF/mods.toml
+++ b/Forge/src/main/resources/META-INF/mods.toml
@@ -31,22 +31,23 @@ credits = ""
 authors = "Markus Bordihn"
 description = '''Create easily NPCs for your world or for your mods.'''
 
-[[dependencies.easy_npc]] #optional
-# the modid of the dependency
-modId = "forge" #mandatory
-# Does this dependency have to exist - if not, ordering below must be specified
-mandatory = true #mandatory
-# The version range of the dependency
-versionRange = "[43,)" #mandatory
-# An ordering relationship for the dependency - BEFORE or AFTER required if the relationship is not mandatory
+[[dependencies.easy_npc]]
+modId = "forge"
+mandatory = true
+versionRange = "[43,)"
 ordering = "NONE"
-# Side this dependency is applied on - BOTH, CLIENT or SERVER
 side = "BOTH"
 
 [[dependencies.easy_npc]]
 modId = "minecraft"
 mandatory = true
-# This version range declares a minimum of the current minecraft version up to but not including the next major version
 versionRange = "[1.19.2,1.20)"
+ordering = "NONE"
+side = "BOTH"
+
+[[dependencies.easy_npc]]
+modId = "armourers_workshop"
+mandatory = false
+versionRange = "[2.0.1,)"
 ordering = "NONE"
 side = "BOTH"
