--- a/gradle.properties
+++ b/gradle.properties
@@ -3,7 +3,7 @@
 org.gradle.jvmargs=-Xmx3G
 org.gradle.daemon=false
 # Project
-version=3.6.1
+version=3.7.1
 group=de.markusbordihn.easynpc
 vendor_name=markusbordihn
 # Common
@@ -24,3 +24,5 @@ curseforge_api_token=Never put your token here!
 # Development Mods
 xaeros_minimap_mod=4933779
 spark_mod=4381167
+# Integrations
+armourers_workshop_mod=
