Restricted the edit behavior for NPC to allow more use-cases to the following:   - User is sneaking and clicking on the NPC (creative mode only)   - User is holding the NPC wand and clicking on the NPC (all modes) Added possibility to adjust sliders with mouse wheel and arrow keys for better usability. Added dialog text editor to allow multiple dialog texts variants for the same dialog. Added "can_use_nether_portal" attribute to allow NPCs to use nether portals or not. Added support for `@initator` with `onHurt` and `onDeath` events. Added support for [Armourer's Workshop][armourers_workshop] mod. Thanks to @SAGESSE-CN. Added possibility to disable model parts to the advanced pose editor. Separated the Player Skin and remote URL Skin screen for better usability. Fixed head and body rotation are not show correctly in some instances. Fixed dialog editor UI issue with the new dialog text editor. Code optimizations and cleanup.

--- a/gradle.properties
+++ b/gradle.properties
@@ -3,7 +3,7 @@
 org.gradle.jvmargs=-Xmx3G
 org.gradle.daemon=false
 # Project
-version=3.6.1
+version=3.7.1
 group=de.markusbordihn.easynpc
 vendor_name=markusbordihn
 # Common
@@ -24,3 +24,5 @@ curseforge_api_token=Never put your token here!
 # Development Mods
 xaeros_minimap_mod=4933782
 spark_mod=4738952
+# Integrations
+armourers_workshop_mod=
