Restricted the edit behavior for NPC to allow more use-cases to the following:   - User is sneaking and clicking on the NPC (creative mode only)   - User is holding the NPC wand and clicking on the NPC (all modes) Added possibility to adjust sliders with mouse wheel and arrow keys for better usability. Added dialog text editor to allow multiple dialog texts variants for the same dialog. Added "can_use_nether_portal" attribute to allow NPCs to use nether portals or not. Added support for `@initator` with `onHurt` and `onDeath` events. Added support for [Armourer's Workshop][armourers_workshop] mod. Thanks to @SAGESSE-CN. Added possibility to disable model parts to the advanced pose editor. Separated the Player Skin and remote URL Skin screen for better usability. Fixed head and body rotation are not show correctly in some instances. Fixed dialog editor UI issue with the new dialog text editor. Code optimizations and cleanup.

--- a/Forge/build.gradle
+++ b/Forge/build.gradle
@@ -136,6 +136,11 @@ dependencies {
   // Include Common code
   compileOnly project(":Common")
 
+  // Integration test dependencies
+  if (project.armourers_workshop_mod) {
+    runtimeOnly fg.deobf("curse.maven:armourers-workshop-229523:${project.armourers_workshop_mod}")
+  }
+
   // Additional helpful Mods for development (runtime dependency)
   runtimeOnly fg.deobf("curse.maven:xaeros_minimap-263420:${project.xaeros_minimap_mod}")
   runtimeOnly fg.deobf("curse.maven:spark-361579:${project.spark_mod}")
@@ -193,6 +198,11 @@ curseforge {
     addGameVersion("${project.minecraft_version}")
     addGameVersion("Forge")
     addGameVersion("NeoForge")
+    mainArtifact(jar) {
+      relations {
+        optionalDependency 'armourers-workshop'
+      }
+    }
   }
 }
 
