--- a/gradle.properties
+++ b/gradle.properties
@@ -3,13 +3,13 @@
 org.gradle.jvmargs=-Xmx3G
 org.gradle.daemon=false
 # Project
-version=3.6.1
+version=3.7.1
 group=de.markusbordihn.easynpc
 vendor_name=markusbordihn
 # Common
 minecraft_version=1.20.1
 # Forge
-forge_version=47.2.18
+forge_version=47.2.19
 # Fabric
 fabric_version=0.91.0+1.20.1
 fabric_loader_version=0.15.0
@@ -24,3 +24,5 @@ curseforge_api_token=Never put your token here!
 # Development Mods
 xaeros_minimap_mod=4933782
 spark_mod=4738952
+# Integrations
+armourers_workshop_mod=4987565
