--- a/gradle.properties
+++ b/gradle.properties
@@ -27,3 +27,5 @@ curseforge_api_token=Never put your token here!
 # Development Mods
 xaeros_minimap_mod=4933789
 spark_mod=4763990
+# Integrations
+armourers_workshop_mod=
