--- a/gradle.properties
+++ b/gradle.properties
@@ -3,13 +3,13 @@
 org.gradle.jvmargs=-Xmx3G
 org.gradle.daemon=false
 # Project
-version=3.7.1
+version=3.7.2
 group=de.markusbordihn.easynpc
 vendor_name=markusbordihn
 # Common
 minecraft_version=1.18.2
 # Forge
-forge_version=40.2.14
+forge_version=40.2.17
 # Fabric
 fabric_version=0.76.0+1.18.2
 fabric_loader_version=0.14.24
@@ -26,3 +26,4 @@ xaeros_minimap_mod=3712760
 spark_mod=4505375
 # Integrations
 armourers_workshop_mod=4987568
+epic_fight_mod=4922082
