--- a/gradle.properties
+++ b/gradle.properties
@@ -3,7 +3,7 @@
 org.gradle.jvmargs=-Xmx3G
 org.gradle.daemon=false
 # Project
-version=3.7.1
+version=3.7.2
 group=de.markusbordihn.easynpc
 vendor_name=markusbordihn
 # Common
@@ -26,3 +26,4 @@ xaeros_minimap_mod=4933777
 spark_mod=4057111
 # Integrations
 armourers_workshop_mod=4987575
+epic_fight_mod=4922089
