Added Easy NPC position tool to allow easier positioning of NPCs. Added additional Easy NPC Spawn Eggs and entity types for mod integrations. Fixed bounding boxes for NPCs with custom models, poses and scaling. Fixed issue with cut-off dialog button text.

--- a/gradle.properties
+++ b/gradle.properties
@@ -3,13 +3,13 @@
 org.gradle.jvmargs=-Xmx3G
 org.gradle.daemon=false
 # Project
-version=3.7.1
+version=3.7.2
 group=de.markusbordihn.easynpc
 vendor_name=markusbordihn
 # Common
 minecraft_version=1.19.4
 # Forge
-forge_version=45.2.6
+forge_version=45.2.8
 # Fabric
 fabric_version=0.87.2+1.19.4
 fabric_loader_version=0.15.0
@@ -26,3 +26,4 @@ xaeros_minimap_mod=4933780
 spark_mod=4505309
 # Integrations
 armourers_workshop_mod=
+epic_fight_mod=
