Added `/easy_npc preset import` support for command blocks and functions with resource location. Added `/easy_npc dialog open <npc-uuid> <player> <dialog>` command to open the dialog screen for a specific NPC and player for #75. Fixed #87: Ignore damage even from creative players and ops. Fixed #85: Added de-spawn range option for the NPC Spawner. Fixed #84: Text format codes applying on more text that they should. Fixed #77: Added options to disable armor/equipment rendering for NPCs. Fixed #76 and #79: Added home position and `MoveBackToHome` for NPCs to allow them to return to a specific position.

--- a/Forge/build.gradle
+++ b/Forge/build.gradle
@@ -209,6 +209,17 @@ curseforge {
   }
 }
 
+modrinth {
+  token = "${credentials.forKey('modrinth_api_token')}"
+  projectId = "${project.modrinth_project_id}"
+  versionNumber = "${project.version}"
+  versionType = "${project.modrinth_release_type}"
+  versionName = "${project.mod_name} ${project.version}"
+  uploadFile = jar
+  gameVersions = ["${project.minecraft_version}"]
+  loaders = ["forge"]
+}
+
 tasks.withType(JavaCompile).configureEach {
   options.encoding = 'UTF-8' // Use the UTF-8 charset for Java compilation
 }
