Added `/easy_npc preset import` support for command blocks and functions with resource location. Added `/easy_npc dialog open <npc-uuid> <player> <dialog>` command to open the dialog screen for a specific NPC and player for #75. Fixed #87: Ignore damage even from creative players and ops. Fixed #85: Added de-spawn range option for the NPC Spawner. Fixed #84: Text format codes applying on more text that they should. Fixed #77: Added options to disable armor/equipment rendering for NPCs. Fixed #76 and #79: Added home position and `MoveBackToHome` for NPCs to allow them to return to a specific position.

--- a/gradle.properties
+++ b/gradle.properties
@@ -3,7 +3,7 @@
 org.gradle.jvmargs=-Xmx3G
 org.gradle.daemon=false
 # Project
-version=3.8.0
+version=3.9.0
 group=de.markusbordihn.easynpc
 vendor_name=markusbordihn
 # Common
@@ -21,6 +21,10 @@ mod_author=Markus Bordihn
 curseforge_release_type=release
 curseforge_project_id=559312
 curseforge_api_token=Never put your token here!
+# Modrinth
+modrinth_release_type=release
+modrinth_project_id=CgGEe1h3
+modrinth_api_token=Never put your token here!
 # Development Mods
 xaeros_minimap_mod=4933777
 spark_mod=4057111
