--- a/gradle.properties
+++ b/gradle.properties
@@ -3,7 +3,7 @@
 org.gradle.jvmargs=-Xmx3G
 org.gradle.daemon=false
 # Project
-version=3.8.0
+version=3.9.0
 group=de.markusbordihn.easynpc
 vendor_name=markusbordihn
 # Common
@@ -20,6 +20,10 @@ neoforge_loader_version_range=[1,)
 mod_id=easy_npc
 mod_name=Easy NPC
 mod_author=Markus Bordihn
+# Modrinth
+modrinth_release_type=release
+modrinth_project_id=CgGEe1h3
+modrinth_api_token=Never put your token here!
 # CurseForge
 curseforge_release_type=release
 curseforge_project_id=559312
