--- a/gradle.properties
+++ b/gradle.properties
@@ -3,7 +3,7 @@
 org.gradle.jvmargs=-Xmx3G
 org.gradle.daemon=false
 # Project
-version=3.9.0
+version=3.10.0
 group=de.markusbordihn.easynpc
 vendor_name=markusbordihn
 # Common
@@ -31,3 +31,6 @@ spark_mod=4505375
 # Integrations
 armourers_workshop_mod=4987568
 epic_fight_mod=4922082
+create_mod=4835188
+mrcrayfishs_gun_mod=4344223
+framework_mod=4613856
