Code refactoring for objectives and goals.

--- a/gradle.properties
+++ b/gradle.properties
@@ -3,7 +3,7 @@
 org.gradle.jvmargs=-Xmx3G
 org.gradle.daemon=false
 # Project
-version=3.9.0
+version=3.10.0
 group=de.markusbordihn.easynpc
 vendor_name=markusbordihn
 # Common
@@ -31,3 +31,6 @@ spark_mod=4738952
 # Integrations
 armourers_workshop_mod=
 epic_fight_mod=
+create_mod=
+mrcrayfishs_gun_mod=
+framework_mod=
