Refactored code for better performance and easier maintenance. Added item tooltips for equipment and trading configuration screens. Fixed #93: Added render support for equipped modded items and armors.

--- a/gradle.properties
+++ b/gradle.properties
@@ -31,6 +31,6 @@ spark_mod=4738952
 # Integrations
 armourers_workshop_mod=4987565
 epic_fight_mod=4945239
-create_mod=
+create_mod=4835191
 mrcrayfishs_gun_mod=
 framework_mod=
