--- a/gradle.properties
+++ b/gradle.properties
@@ -28,9 +28,13 @@ modrinth_api_token=Never put your token here!
 # Development Mods
 xaeros_minimap_mod=3712760
 spark_mod=4505375
+cloth_config_mod=4973439
+player_animator_mod=4418152
 # Integrations
 armourers_workshop_mod=4987568
 epic_fight_mod=4922082
 create_mod=4835188
 mrcrayfishs_gun_mod=4344223
 framework_mod=4613856
+project_mmo_mod=4847410
+better_combat_mod=4428885
