--- a/gradle.properties
+++ b/gradle.properties
@@ -3,7 +3,7 @@
 org.gradle.jvmargs=-Xmx3G
 org.gradle.daemon=false
 # Project
-version=3.10.0
+version=3.11.0
 group=de.markusbordihn.easynpc
 vendor_name=markusbordihn
 # Common
@@ -28,9 +28,13 @@ curseforge_api_token=Never put your token here!
 # Development Mods
 xaeros_minimap_mod=4933780
 spark_mod=4505309
+cloth_config_mod=
+player_animator_mod=
 # Integrations
 armourers_workshop_mod=
 epic_fight_mod=
 create_mod=
 mrcrayfishs_gun_mod=
 framework_mod=
+project_mmo_mod=
+better_combat_mod=
