--- a/gradle.properties
+++ b/gradle.properties
@@ -3,7 +3,7 @@
 org.gradle.jvmargs=-Xmx3G
 org.gradle.daemon=false
 # Project
-version=3.10.0
+version=3.11.0
 group=de.markusbordihn.easynpc
 vendor_name=markusbordihn
 # Common
@@ -28,9 +28,13 @@ curseforge_api_token=Never put your token here!
 # Development Mods
 xaeros_minimap_mod=4933782
 spark_mod=4738952
+cloth_config_mod=4973441
+player_animator_mod=4587214
 # Integrations
 armourers_workshop_mod=4987565
 epic_fight_mod=4945239
 create_mod=4835191
 mrcrayfishs_gun_mod=
 framework_mod=
+project_mmo_mod=5158245
+better_combat_mod=5065424
