--- a/gradle.properties
+++ b/gradle.properties
@@ -3,13 +3,13 @@
 org.gradle.jvmargs=-Xmx3G
 org.gradle.daemon=false
 # Project
-version=4.0.0
+version=4.0.1
 group=de.markusbordihn.easynpc
 vendor_name=markusbordihn
 # Common
 minecraft_version=1.18.2
 # Forge
-forge_version=40.2.17
+forge_version=40.2.18
 # Fabric
 fabric_version=0.76.0+1.18.2
 fabric_loader_version=0.14.24
@@ -36,5 +36,5 @@ epic_fight_mod=4922082
 create_mod=4835188
 mrcrayfishs_gun_mod=4344223
 framework_mod=4613856
-project_mmo_mod=4847410
+project_mmo_mod=
 better_combat_mod=4428885
