--- a/Fabric/build.gradle
+++ b/Fabric/build.gradle
@@ -1,5 +1,5 @@
 plugins {
-  id 'fabric-loom' version '0.12-SNAPSHOT'
+  id 'fabric-loom' version '1.4-SNAPSHOT'
   id 'maven-publish'
   id 'idea'
   id 'com.matthewprenger.cursegradle' version '1.4.0'
@@ -54,7 +54,7 @@ processResources {
   }
 }
 
-tasks.withType(JavaCompile) {
+tasks.withType(JavaCompile).configureEach {
   source(project(":Common").sourceSets.main.allSource)
 }
 
