--- a/build.gradle
+++ b/build.gradle
@@ -1,3 +1,8 @@
+plugins {
+  // Required for NeoGradle
+  id "org.jetbrains.gradle.plugin.idea-ext" version "1.1.7"
+}
+
 subprojects {
 
   apply plugin: 'java'
@@ -17,7 +22,7 @@ subprojects {
   }
 
   tasks.register('wrapper', Wrapper) {
-    gradleVersion = '8.4'
+    gradleVersion = '8.7'
   }
 
   tasks.withType(JavaCompile).configureEach {
@@ -33,5 +38,4 @@ subprojects {
   }
 
   tasks.register("prepareKotlinBuildScriptModel") {}
-
 }
