Normalized all cache, skin, template and preset names to lowercase with additional checks for unsafe characters. Finalized orc model and texture. Fixed #123: By adding additional checks for the export and import of NPCs. Replaced custom TAGs with entity TAGs for better compatibility with other mods. Optimized custom and player texture manager.

--- a/Forge/build.gradle
+++ b/Forge/build.gradle
@@ -166,6 +166,10 @@ dependencies {
   if (project.player_animator_mod) {
     runtimeOnly fg.deobf("curse.maven:player-animator-658587:${project.player_animator_mod}")
   }
+
+  // Testing
+  runtimeOnly fg.deobf("curse.maven:create-328085:${project.create_mod}")
+  runtimeOnly fg.deobf("curse.maven:create-328085:${project.create_mod}")
 }
 
 tasks.withType(JavaCompile).configureEach {
