Fixed Illager head and leg animations. Fixed #138: Added additional debug information. Fixed #135: Added check if NPC is already trading before opening a new trading screen and inform the player about it. Fixed #136: Added additional fallback check for missing sounds, before using the explosion sound. Fixed #137: Correcting the item arm position for all model. Added hand item render support for most NPCs even for chicken and others. ;) Improved NPC model and NPC renderer by skipping rendering of invisible parts based on the model type. Unified initial movement speed for all NPCs according to their types.

--- a/Forge/build.gradle
+++ b/Forge/build.gradle
@@ -234,6 +234,7 @@ modrinth {
   versionNumber = "${project.version}"
   versionType = "${project.modrinth_release_type}"
   versionName = "${project.mod_name} ${project.version}"
+  changelog = rootProject.file("CHANGELOG.md").text
   uploadFile = jar
   gameVersions = ["${project.minecraft_version}"]
   loaders = ["forge"]
