Fixed #159: Added additional tags and support for modded bows and crossbows items. Fixed #158: By moving specific log messages to debug level. Fixed #94: Added basic support for guns which are not extending the vanilla bow or crossbow item. Fixed #72: Added additional owner objectives and checks for Armour's Workshop Wand.

--- a/Forge/build.gradle
+++ b/Forge/build.gradle
@@ -163,6 +163,10 @@ dependencies {
     runtimeOnly fg.deobf("curse.maven:player-animator-658587:${project.player_animator_mod}")
   }
 
+  if (test_integration_mod && project.spartan_weaponry_mod) {
+    runtimeOnly fg.deobf("curse.maven:spartan-weaponry-278141:${project.spartan_weaponry_mod}")
+  }
+
   // Additional helpful Mods for development (runtime dependency)
   runtimeOnly fg.deobf("curse.maven:xaeros_minimap-263420:${project.xaeros_minimap_mod}")
   runtimeOnly fg.deobf("curse.maven:spark-361579:${project.spark_mod}")
