--- a/gradle.properties
+++ b/gradle.properties
@@ -3,7 +3,7 @@
 org.gradle.jvmargs=-Xmx3G
 org.gradle.daemon=false
 # Project
-version=4.3.3
+version=4.4.0
 group=de.markusbordihn.easynpc
 vendor_name=markusbordihn
 # Common
@@ -39,3 +39,4 @@ framework_mod=4613856
 mrcrayfishs_gun_mod=4344223
 player_animator_mod=4418152
 project_mmo_mod=
+spartan_weaponry_mod=5256293
