Fixed wrong CHANGELOG.md reference.

--- a/Forge/build.gradle
+++ b/Forge/build.gradle
@@ -214,7 +214,7 @@ curseforge {
   apiKey = "${credentials.forKey('curseforge_api_token')}"
   project {
     id = "${project.curseforge_project_id}"
-    changelog = rootProject.file("../CHANGELOG.md")
+    changelog = rootProject.file("CHANGELOG.md")
     changelogType = 'markdown'
     releaseType = "${project.curseforge_release_type}"
     addGameVersion("${project.minecraft_version}")
