--- a/settings.gradle
+++ b/settings.gradle
@@ -21,4 +21,5 @@ pluginManagement {
 }
 
 rootProject.name = 'Easy NPC'
-include("Common", "Fabric", "Forge", "NeoForge")
+include("Common", "Fabric", "Forge")
+// include("Common", "Fabric", "Forge", "NeoForge")
