Fixed #248 by adding new Chinese translations. Thanks to @Sunny-Again.

--- a/NeoForge/src/main/resources/META-INF/mods.toml
+++ b/NeoForge/src/main/resources/META-INF/mods.toml
@@ -33,14 +33,14 @@ description = '''Create easily NPCs for your world or for your mods.'''
 
 [[dependencies.easy_npc]]
 modId = "neoforge"
-mandatory = true
-versionRange = "[2,)"
+type = "required"
+versionRange = "[20.4,)"
 ordering = "NONE"
 side = "BOTH"
 
 [[dependencies.easy_npc]]
 modId = "minecraft"
-mandatory = true
+type = "required"
 versionRange = "[1.20.4,1.21)"
 ordering = "NONE"
 side = "BOTH"
