Refactored Network Protocol to support 1.20.4 and 1.21.x changes. Fixed #188 by adding support for [Immersive Melodies][immersive-melodies] Fixed #245 by moving specific log messages to debug level. Fixed Smart Animation detection. Added `/easy_npc equipment set <npc> <slot> <item>` command to set equipment for NPCs. Added `/easy_npc equipment remove <npc> <slot>` command to remove equipment from NPCs.

--- a/Forge/build.gradle
+++ b/Forge/build.gradle
@@ -143,9 +143,11 @@ dependencies {
   if (test_integration_mod && project.player_animator_mod) {
     runtimeOnly fg.deobf("curse.maven:player-animator-658587:${project.player_animator_mod}")
   }
-
   if (test_integration_mod && project.spartan_weaponry_mod) {
     runtimeOnly fg.deobf("curse.maven:spartan-weaponry-278141:${project.spartan_weaponry_mod}")
+  }
+  if (test_integration_mod && project.immersive_melodies_mod) {
+    runtimeOnly fg.deobf("curse.maven:immersive-melodies-904471:${project.immersive_melodies_mod}")
   }
 
   // Additional helpful Mods for development (runtime dependency)
