--- a/gradle.properties
+++ b/gradle.properties
@@ -3,7 +3,7 @@
 org.gradle.jvmargs=-Xmx3G
 org.gradle.daemon=false
 # Project
-version=5.1.1
+version=5.2.0
 group=de.markusbordihn.easynpc
 vendor_name=markusbordihn
 # Common
@@ -29,7 +29,7 @@ modrinth_api_token=Never put your token here!
 xaeros_minimap_mod=3712760
 spark_mod=4505375
 # Integrations
-test_integration_mod=
+test_integration_mod=1
 armourers_workshop_mod=4987568
 better_combat_mod=4428885
 cloth_config_mod=4973439
@@ -40,3 +40,4 @@ mrcrayfishs_gun_mod=4344223
 player_animator_mod=4418152
 project_mmo_mod=
 spartan_weaponry_mod=5256293
+immersive_melodies_mod=5499322
