--- a/gradle.properties
+++ b/gradle.properties
@@ -3,7 +3,7 @@
 org.gradle.jvmargs=-Xmx3G
 org.gradle.daemon=false
 # Project
-version=5.1.1
+version=5.2.0
 group=de.markusbordihn.easynpc
 vendor_name=markusbordihn
 # Common
@@ -29,7 +29,7 @@ modrinth_api_token=Never put your token here!
 xaeros_minimap_mod=4933782
 spark_mod=4738952
 # Integrations
-test_integration_mod=
+test_integration_mod=1
 armourers_workshop_mod=5228927
 better_combat_mod=
 cloth_config_mod=
@@ -40,3 +40,4 @@ mrcrayfishs_gun_mod=
 player_animator_mod=
 project_mmo_mod=
 spartan_weaponry_mod=
+immersive_melodies_mod=5496454
