Refactored Network Protocol to support 1.20.4 and 1.21.x changes. Fixed #188 by adding support for [Immersive Melodies][immersive-melodies] Fixed #245 by moving specific log messages to debug level. Fixed Smart Animation detection. Added `/easy_npc equipment set <npc> <slot> <item>` command to set equipment for NPCs. Added `/easy_npc equipment remove <npc> <slot>` command to remove equipment from NPCs.

--- a/gradle.properties
+++ b/gradle.properties
@@ -3,7 +3,7 @@
 org.gradle.jvmargs=-Xmx3G
 org.gradle.daemon=false
 # Project
-version=5.1.2
+version=5.2.0
 group=de.markusbordihn.easynpc
 vendor_name=markusbordihn
 # Common
@@ -43,3 +43,4 @@ mrcrayfishs_gun_mod=
 player_animator_mod=
 project_mmo_mod=
 spartan_weaponry_mod=
+immersive_melodies_mod=
