--- a/Forge/build.gradle
+++ b/Forge/build.gradle
@@ -1,10 +1,3 @@
-buildscript {
-  repositories {
-    maven { url = 'https://maven.minecraftforge.net' }
-    mavenCentral()
-  }
-}
-
 plugins {
   id 'maven-publish'
   id 'net.minecraftforge.gradle' version '6.+'
@@ -19,32 +12,18 @@ archivesBaseName = "${mod_id}-forge-${minecraft_version}"
 
 println('Java: ' + System.getProperty('java.version') + ' JVM: ' + System.getProperty('java.vm.version') + '(' + System.getProperty('java.vendor') + ') Arch: ' + System.getProperty('os.arch'))
 minecraft {
-  // The mappings can be changed at any time, and must be in the following format.
-  // snapshot_YYYYMMDD   Snapshot are built nightly.
-  // stable_#            Stables are built at the discretion of the MCP team.
-  // Use non-default mappings at your own risk. they may not always work.
-  // Simply re-run your setup task after changing the mappings to update your workspace.
   mappings channel: 'official', version: "${project.minecraft_version}"
   // makeObfSourceJar = false // an Srg named sources jar is made by default. uncomment this to disable.
 
   // accessTransformer = file('src/main/resources/META-INF/accesstransformer.cfg')
 
   // Default run configurations.
-  // These can be tweaked, removed, or duplicated as needed.
   runs {
     client {
-      workingDirectory project.file('run')
-
-      // Recommended logging data for a userdev environment
-      // The markers can be changed as needed.
-      // "SCAN": For mods scan.
-      // "REGISTRIES": For firing of registry events.
-      // "REGISTRYDUMP": For getting the contents of all registries.
+      jvmArgs "-XX:+AllowEnhancedClassRedefinition"
+      workingDirectory project.file('run/client')
       property 'forge.logging.markers', 'REGISTRIES'
-
-      // Recommended logging level for the console
       property 'forge.logging.console.level', 'debug'
-
       mods {
         easy_npc {
           source sourceSets.main
@@ -56,17 +35,16 @@ minecraft {
       property 'mixin.env.refMapRemappingFile', "${projectDir}/build/createSrgToMcp/output.srg"
     }
 
+    client2 {
+      parent minecraft.runs.client
+      workingDirectory project.file('run/client2')
+      args '--username', 'guest_player'
+    }
+
     server {
-      workingDirectory project.file('run')
-
-      // Recommended logging data for a userdev environment
-      // The markers can be changed as needed.
-      // "SCAN": For mods scan.
-      // "REGISTRIES": For firing of registry events.
-      // "REGISTRYDUMP": For getting the contents of all registries.
+      jvmArgs "-XX:+AllowEnhancedClassRedefinition"
+      workingDirectory project.file('run/server')
       property 'forge.logging.markers', 'REGISTRIES'
-
-      // Recommended logging level for the console
       property 'forge.logging.console.level', 'debug'
 
       mods {
@@ -81,21 +59,11 @@ minecraft {
     }
 
     data {
-      workingDirectory project.file('run')
-
-      // Recommended logging data for a userdev environment
-      // The markers can be changed as needed.
-      // "SCAN": For mods scan.
-      // "REGISTRIES": For firing of registry events.
-      // "REGISTRYDUMP": For getting the contents of all registries.
+      workingDirectory project.file('run/data')
       property 'forge.logging.markers', 'REGISTRIES'
-
-      // Recommended logging level for the console
       property 'forge.logging.console.level', 'debug'
 
-      // Specify the modid for data generation, where to output the resulting resource, and where to look for existing resources.
       args '--mod', "${project.mod_id}", '--all', '--output', file('src/generated/resources/'), '--existing', file('src/main/resources/')
-
       mods {
         easy_npc {
           source sourceSets.main
@@ -109,9 +77,6 @@ minecraft {
 sourceSets.main.resources { srcDir 'src/generated/resources' }
 
 dependencies {
-  // Specify the version of Minecraft to use, If this is any group other then 'net.minecraft' it is assumed
-  // that the dep is a ForgeGradle 'patcher' dependency. And it's patches will be applied.
-  // The userdev artifact is a special name and will get all sorts of transformations applied to it.
   minecraft "net.minecraftforge:forge:${project.minecraft_version}-${project.forge_version}"
 
   // Include Common code
