--- a/gradle.properties
+++ b/gradle.properties
@@ -29,7 +29,7 @@ modrinth_api_token=Never put your token here!
 xaeros_minimap_mod=3712760
 spark_mod=4505375
 # Integrations
-test_integration_mod=1
+test_integration_mod=
 armourers_workshop_mod=4987568
 better_combat_mod=4428885
 cloth_config_mod=4973439
